# projeto-ed-satc

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
docs/: index.md  sobre.md
site/: index.html  sitemap.xml
site/search/: search_index.json
sobre/: index.html
